# Data_Extraction_NLP

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/training/: mds_training_data.xlsx  sds_training_data.xlsx
data/validation/: mds_validation_data.xlsx  sds_validation_data.xlsx
scripts/: evaluate_bert_model.py  evaluate_spacy_model.py  extract_with_bert.py  extract_with_spacy.py  train_bert_model.py  train_spacy_model.py
src/datasheet_extraction/: __init__.py
src/datasheet_extraction/cli/: __init__.py  extract_with_bert.py  extract_with_spacy.py
src/datasheet_extraction/data/: hf_training_dataset.py  spacy_training_data.py
src/datasheet_extraction/models/: __init__.py  evaluate_bert.py  evaluate_spacy.py  train_bert.py  train_spacy.py
src/datasheet_extraction/processing/: __init__.py  entity_postprocessing.py  pdf_preprocessing.py
